Cleaned up class names and markup

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav class="container__nav">
+  <nav>
     <ul class="container-width">
       <li class="home-link"><a href="index.html">HELLO</a></li>
       <li class="resume-link"><a href="resume.html">RESUME</a></li>
@@ -20,8 +20,8 @@
     </ul>
   </nav>
 
-  <main class="container__landing container-width slide_element slide_element--fadein">
-    <div class="container__landing-content">
+  <main class="home container-width animation_element animation_element--fadein">
+    <div class="home__content">
       <h1>Valerie Seer</h1>
       <h2>Web Developer &amp; Designer based in Chicago, Illinois.</h2>
       <p>I build websites and design UI/UX solutions.</p>
@@ -49,15 +49,17 @@
         </li>
       </ul>
     </div>
-    <div class="container__landing-img">
+    <div class="home__img">
       <img src="images/giphy.gif"/>
       <p>Probably me right now.</p>
     </div>
   </main>
 
   <footer>
-    <a href="mailto:seervalerie@gmail.com" class="footer-email">Email Me</a>
-    <section>&copy; <span class="copyright-date"></span> Valerie Seer</section>
+    <a href="mailto:seervalerie@gmail.com" class="footer__email-btn">Email Me</a>
+    <div>
+      <p>&copy; <span class="copyright-date"></span> Valerie Seer</p>
+    </div>
   </footer>
 
   <!-- scripts -->
