--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav class="container__nav">
+  <nav>
     <ul class="container-width">
       <li class="home-link"><a href="index.html">HELLO</a></li>
       <li class="resume-link"><a href="resume.html">RESUME</a></li>
@@ -20,21 +20,21 @@
     </ul>
   </nav>
 
-  <main class="container__portfolio container-width slide_element slide_element--fadein">
-    <div class="container__portfolio-tiles">
+  <main class="portfolio container-width animation_element animation_element--fadein">
+    <div class="portfolio__tiles">
       <h1>Selected works</h1>
-      <div class="tile-container">
+      <div class="portfolio__tiles-item">
         <div class="tile tile-1">
           <a href="http://health.localsearchprofiles.com/simon-chau-chicago-cardiology" target="_blank">
             <div class="tile-content">
-              <h2>Profile Page template for providers</h2>
+              <h2>Business listing page for healthcare providers</h2>
               <p>UI/UX Design and Development</p>
               <p>Bootstrap, LESS, Mustache, jQuery</p>
             </div>
           </a>
         </div>
       </div>
-      <div class="tile-container">
+      <div class="portfolio__tiles-item">
         <div class="tile tile-2">
           <a href="https://spark72018.github.io/travelBot/" target="_blank">
             <div class="tile-content">
@@ -46,8 +46,7 @@
           </a>
         </div>
       </div>
-
-      <div class="tile-container">
+      <div class="portfolio__tiles-item">
         <div class="tile tile-3">
           <a href="https://www.behance.net/gallery/32605937/School-Project-Donuts-Now" target="_blank">
             <div class="tile-content">
@@ -58,7 +57,7 @@
           </a>
         </div>
       </div>
-      <div class="tile-container">
+      <div class="portfolio__tiles-item">
         <div class="tile tile-4">
           <a href="https://www.behance.net/gallery/32646413/School-Project-FRESH" target="_blank">
             <div class="tile-content">
@@ -72,36 +71,34 @@
     </div>
   </main>
 
-  <section class="footer-links">
-    <section class="container-width">
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
-            LinkedIn
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/valerieseer" target="_blank">
-            Github
-          </a>
-        </li>
-        <li>
-          <a href="https://www.behance.net/valerieseer" target="_blank">
-            Behance
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/valerieseer" target="_blank">
-            Twitter
-          </a>
-        </li>
-      </ul>
-    </section>
-  </section>
-
   <footer>
-    <section>&copy; <span class="copyright-date"></span> Valerie Seer</section>
+    <ul>
+      <li>
+        <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
+          LinkedIn
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/valerieseer" target="_blank">
+          Github
+        </a>
+      </li>
+      <li>
+        <a href="https://www.behance.net/valerieseer" target="_blank">
+          Behance
+        </a>
+      </li>
+      <li>
+        <a href="https://twitter.com/valerieseer" target="_blank">
+          Twitter
+        </a>
+      </li>
+    </ul>
+    <section>
+      <p>&copy; <span class="copyright-date"></span> Valerie Seer</p>
+    </section>
   </footer>
+
 
   <!-- scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
