Update col class

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
 <body>
   <nav>
-    <ul class="container-width">
+    <ul class="col">
       <li class="home-link"><a href="index.html">HELLO</a></li>
       <li class="resume-link"><a href="resume.html">RESUME</a></li>
       <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li>
     </ul>
   </nav>
 
-  <main class="home container-width animation_element animation_element--fadein">
+  <main class="home col animation_element animation_element--fadein">
     <div class="home__content">
       <h1>Valerie Seer</h1>
       <h2>Web Developer &amp; Designer based in Chicago, Illinois.</h2>
