--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
 
   <body>  
     <nav class="animation_element animation_element--fadein">
-      <ul class="container-width">
+      <ul class="col">
         <li class="home-link"><a href="index.html">HELLO</a></li>
         <li class="resume-link"><a href="resume.html">RESUME</a></li>
         <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li>
@@ -32,7 +32,7 @@
 
     <header class="resume-header animation_element animation_element--fadein">
       <div class="resume-header__bg"></div>
-      <div class="container-width">
+      <div class="col">
         <div class="resume-header__content">
             <img src="images/myface.jpg"/>
             <div class="resume-header__title">
@@ -47,7 +47,7 @@
       </div>
     </header>
 
-    <main class="resume-main container-width animation_element animation_element--fadein">
+    <main class="resume-main col animation_element animation_element--fadein">
       <div class="resume-main__left resume-main__skills">
         <h2>Skills</h2>
         <ul>
