--- a/portfolio.html
+++ b/portfolio.html
@@ -23,14 +23,14 @@
 
 <body>
   <nav>
-    <ul class="container-width">
+    <ul class="col">
       <li class="home-link"><a href="index.html">HELLO</a></li>
       <li class="resume-link"><a href="resume.html">RESUME</a></li>
       <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li>
     </ul>
   </nav>
 
-  <main class="portfolio container-width animation_element animation_element--fadein">
+  <main class="portfolio col animation_element animation_element--fadein">
     <div class="portfolio__tiles">
       <h1>Selected works</h1>
       <div class="portfolio__tiles-item">
