--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <main class="home col animation_element animation_element--fadein">
     <div class="home__content">
       <h1>Valerie Seer</h1>
-      <h2>Web Developer &amp; Designer based in Chicago, Illinois.</h2>
-      <p>I build websites and design UI/UX solutions.</p>
+      <h2>Front End Web Developer &amp; UX Designer <br> Chicago, Illinois</h2>
+      <p>I build websites and design UX solutions.</p>
       <p>Catch me on:</p>
       <ul>
         <li>
@@ -50,11 +50,6 @@
         <li>
           <a href="https://www.behance.net/valerieseer" target="_blank">
             Behance
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/valerieseer" target="_blank">
-            Twitter
           </a>
         </li>
       </ul>
