--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
             <img src="images/myface.jpg"/>
             <div class="resume-header__title">
               <h1>Valerie Seer</h1>
-              <h2>Web Developer</h2>
+              <h2>Front End Web Developer & UX Designer</h2>
               <ul>
                 <li><a href="mailto:seervalerie@gmail.com"><i class="fa fa-envelope"></i>seervalerie@gmail.com</a></li>
               </ul>
@@ -71,10 +71,10 @@
           <ul>
             <li>
               <div class="resume-main__work-title">
-                <h3>UI/UX Developer</h3>
+                <h3>UI/UX Designer</h3>
                 <p><span class="company">Reputation.com, </span> <span class="dates">2016 - Present</span></p>
               </div>
-              <p>Develop and maintain business listing pages using JavaScript, Mustache.js, Bootstrap, Less, Gulp, Git, and Jenkins. Implement front-end JavaScript integrations. Maintain a library of reusable UI components. Work within an Agile Kanban environment to continuously meet client requests.</p>
+              <p>Develop and maintain business listing web pages using web technologies not limited to: jQuery, Mustache.js, Bootstrap, Less, Gulp, Git, and Jenkins. Implement front-end JavaScript integrations. Maintain a library of reusable UI components. Work within an Agile Kanban environment to continuously meet client requests. </p>
             </li>
             <li>
               <div class="resume-main__work-title">
@@ -100,12 +100,12 @@
           <h2>Education</h2>
           <ul>
             <li>
-              <h3>Certificate in Interactive Design &amp; Development</h3> 
-              <p>Harold Washington College, <span class="dates">2015 - 2016</span></p>
-            </li>
-            <li>
               <h3>B.A. in Communication Studies &amp; English Literature</h3>
               <p>Northwestern University,<span class="dates"> 2008 - 2012</span></p>
+            </li>
+            <li>
+              <h3>Certificate in Interactive Design &amp; Development</h3> 
+              <p>Harold Washington College, <span class="dates">2015 - 2016</span></p>
             </li>
           </ul>
         </div>
@@ -127,11 +127,6 @@
         <li>
           <a href="https://www.behance.net/valerieseer" target="_blank">
             Behance
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/valerieseer" target="_blank">
-            Twitter
           </a>
         </li>
       </ul>
