Update footer css, content

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
     <ul class="col">
       <li class="home-link"><a href="index.html">HELLO</a></li>
       <li class="resume-link"><a href="resume.html">RESUME</a></li>
-      <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li>
+      <li class="portfolio-link"><a href="portfolio.html">RESUME</a></li>
     </ul>
   </nav>
 
