--- a/index.html
+++ b/index.html
@@ -22,48 +22,46 @@
 </head>
 
 <body>
-  <nav>
-    <ul class="col">
-      <li class="home-link"><a href="index.html">HELLO</a></li>
-      <li class="resume-link"><a href="resume.html">RESUME</a></li>
-      <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li>
-    </ul>
-  </nav>
-
-  <main class="home col animation_element animation_element--fadein">
-    <div class="home__content">
-      <h1>Valerie Seer</h1>
-      <h2>Front End Web Developer &amp; UX Designer <br> Chicago, Illinois</h2>
-      <p>I build websites and design UX solutions.</p>
-      <p>Catch me on:</p>
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
-            LinkedIn
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/valerieseer" target="_blank">
-            Github
-          </a>
-        </li>
-        <li>
-          <a href="https://www.behance.net/valerieseer" target="_blank">
-            Behance
-          </a>
-        </li>
-      </ul>
+  <section class="homepage-wrapper">
+    <div class="main-content">
+      <nav>
+          <ul class="col">
+            <li class="home-link"><a href="index.html">HELLO</a></li>
+            <li class="resume-link"><a href="resume.html">RESUME</a></li>
+          </ul>
+      </nav>
+      
+      <main class="home col animation_element animation_element--fadein">
+        <div class="home__content">
+          <h1>Valerie Seer</h1>
+          <h2>Web Developer &amp; UX Designer <br> Chicago, Illinois</h2>
+          <p>I build websites and design UX solutions.</p>
+          <p>Catch me on:</p>
+          <ul>
+            <li>
+              <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
+                LinkedIn
+              </a>
+            </li>
+            <li>
+              <a href="https://codepen.io/valerieseer/" target="_blank">
+                Codepen
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="home__img">
+          <img src="images/giphy.gif"/>
+          <p>Probably me right now.</p>
+        </div>
+      </main>
     </div>
-    <div class="home__img">
-      <img src="images/giphy.gif"/>
-      <p>Probably me right now.</p>
-    </div>
-  </main>
 
-  <footer>
-    <a href="mailto:seervalerie@gmail.com" class="footer__email-btn">Email Me</a>
-    <p>&copy; <span class="copyright-date"></span> Valerie Seer</p>
-  </footer>
+    <footer>
+      <a href="mailto:seervalerie@gmail.com" class="footer__email-btn">Email Me</a>
+      <p>&copy; <span class="copyright-date"></span> Valerie Seer</p>
+    </footer>
+  </section>
 
   <!-- scripts -->
   <script src="js/index.js"></script>
