--- a/resume.html
+++ b/resume.html
@@ -22,117 +22,112 @@
   </head>
 
   <body>  
-    <nav class="animation_element animation_element--fadein">
-      <ul class="col">
-        <li class="home-link"><a href="index.html">HELLO</a></li>
-        <li class="resume-link"><a href="resume.html">RESUME</a></li>
-        <li class="portfolio-link"><a href="portfolio.html">PORTFOLIO</a></li>
-      </ul>
-    </nav>
-
-    <header class="resume-header animation_element animation_element--fadein">
-      <div class="resume-header__bg"></div>
-      <div class="col">
-        <div class="resume-header__content">
-            <img src="images/myface.jpg"/>
-            <div class="resume-header__title">
-              <h1>Valerie Seer</h1>
-              <h2>Front End Web Developer & UX Designer</h2>
-              <ul>
-                <li><a href="mailto:seervalerie@gmail.com"><i class="fa fa-envelope"></i>seervalerie@gmail.com</a></li>
-              </ul>
-              <a href="seer_resume.pdf" target="_blank" class="pdf-link"><i class="fa fa-file-pdf"></i>Download PDF version</a>
-            </div>
-        </div>
-      </div>
-    </header>
-
-    <main class="resume-main col animation_element animation_element--fadein">
-      <div class="resume-main__left resume-main__skills">
-        <h2>Skills</h2>
-        <ul>
-          <h3>Technical</h3>
-          <li>JavaScript, jQuery, React, HTML5, CSS3, Bootstrap, LESS, Git, Gulp, Node.js/npm, Express, Mustache.js, XSLT, WordPress, SquareSpace, WCAG 2.0</li>
+    <section class="resume-wrapper">
+      <nav class="animation_element animation_element--fadein">
+        <ul class="col">
+          <li class="home-link"><a href="index.html">HELLO</a></li>
+          <li class="resume-link"><a href="resume.html">RESUME</a></li>
         </ul>
-        <ul>
-          <h3>Software</h3>
-          <li>Photoshop</li>
-          <li>Illustrator</li>
-        </ul>
-        <ul>
-          <h3>Other Languages</h3>
-          <li>Spanish (written &amp; spoken)</li>
-        </ul>
-      </div>
+      </nav>
 
-      <div class="resume-main__right">
-        <div class="resume-main__work">
-          <h2>Experience</h2>
-          <ul>
-            <li>
-              <div class="resume-main__work-title">
-                <h3>UI/UX Designer</h3>
-                <p><span class="company">Reputation.com, </span> <span class="dates">2016 - Present</span></p>
+      <header class="resume-header animation_element animation_element--fadein">
+        <div class="resume-header__bg"></div>
+        <div class="col">
+          <div class="resume-header__content">
+              <img src="images/myface.jpg"/>
+              <div class="resume-header__title">
+                <h1>Valerie Seer</h1>
+                <h2>Web Developer & UX Designer</h2>
+                <ul>
+                  <li><a href="mailto:seervalerie@gmail.com"><i class="fa fa-envelope"></i>seervalerie@gmail.com</a></li>
+                </ul>
+                <a href="seer_resume.pdf" target="_blank" class="pdf-link"><i class="fa fa-file-pdf"></i>Download PDF version</a>
               </div>
-              <p>Develop and maintain business listing web pages using web technologies not limited to: jQuery, Mustache.js, Bootstrap, Less, Gulp, Git, and Jenkins. Implement front-end JavaScript integrations. Maintain a library of reusable UI components. Work within an Agile Kanban environment to continuously meet client requests. </p>
-            </li>
-            <li>
-              <div class="resume-main__work-title">
-                <h3>Graphic Designer</h3>
-                <p><span class="company">Freelance, </span> <span class="dates">2015 - 2017</span></p>
-              </div>
-              <p>Design visual solutions for small business marketing efforts not limited to: brochures, email banners, eBooks, infographics, and white papers. Provide WordPress theme customization.</p>
-            </li>
-          </ul>
+          </div>
         </div>
+      </header>
 
-        <div class="resume-main__personal-projects">
-          <h2>Personal Projects</h2>
+      <main class="resume-main col animation_element animation_element--fadein">
+        <div class="resume-main__left resume-main__skills">
+          <h2>Skills</h2>
           <ul>
-            <li>
-              <h3><a href="https://spark72018.github.io/travelBot/" target="_blank">NavBuddy</a></h3>
-              <p>A Slack command bot that returns directions and traffic information using the Google Maps API. Technologies: Node.js, Mongo, Express, JavaScript.</p>
-            </li>
+            <h3>Technical</h3>
+            <li>JavaScript, jQuery, React, HTML5, CSS3, Bootstrap, LESS, Git, Gulp, Node.js/npm, Express, Mustache.js, XSLT, WordPress, SquareSpace, WCAG 2.0</li>
           </ul>
-        </div>
-  
-        <div class="resume-main__education">
-          <h2>Education</h2>
           <ul>
-            <li>
-              <h3>B.A. in Communication Studies &amp; English Literature</h3>
-              <p>Northwestern University,<span class="dates"> 2008 - 2012</span></p>
-            </li>
-            <li>
-              <h3>Certificate in Interactive Design &amp; Development</h3> 
-              <p>Harold Washington College, <span class="dates">2015 - 2016</span></p>
-            </li>
+            <h3>Software</h3>
+            <li>Photoshop</li>
+            <li>Illustrator</li>
+          </ul>
+          <ul>
+            <h3>Other Languages</h3>
+            <li>Spanish (written &amp; spoken)</li>
           </ul>
         </div>
-      </div>    
-    </main>
 
-    <footer>
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
-            LinkedIn
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/valerieseer" target="_blank">
-            Github
-          </a>
-        </li>
-        <li>
-          <a href="https://www.behance.net/valerieseer" target="_blank">
-            Behance
-          </a>
-        </li>
-      </ul>
-      <p>&copy; <span class="copyright-date"></span> Valerie Seer</p>
-    </footer>
+        <div class="resume-main__right">
+          <div class="resume-main__work">
+            <h2>Experience</h2>
+            <ul>
+              <li>
+                <div class="resume-main__work-title">
+                  <h3>UI/UX Designer</h3>
+                  <p><span class="company">Reputation.com, </span> <span class="dates">2016 - Present</span></p>
+                </div>
+                <p>Develop and maintain business listing web pages using web technologies not limited to: jQuery, Mustache.js, Bootstrap, Less, Gulp, Git, and Jenkins. Implement front-end JavaScript integrations. Maintain a library of reusable UI components. Work within an Agile Kanban environment to continuously meet client requests. </p>
+              </li>
+              <li>
+                <div class="resume-main__work-title">
+                  <h3>Graphic Designer</h3>
+                  <p><span class="company">Freelance, </span> <span class="dates">2015 - 2017</span></p>
+                </div>
+                <p>Design visual solutions for small business marketing efforts not limited to: brochures, email banners, eBooks, infographics, and white papers. Provide WordPress theme customization.</p>
+              </li>
+            </ul>
+          </div>
 
+          <div class="resume-main__personal-projects">
+            <h2>Personal Projects</h2>
+            <ul>
+              <li>
+                <h3><a href="https://spark72018.github.io/travelBot/" target="_blank">NavBuddy</a></h3>
+                <p>A Slack command bot that returns directions and traffic information using the Google Maps API. Technologies: Node.js, Mongo, Express, JavaScript.</p>
+              </li>
+            </ul>
+          </div>
+    
+          <div class="resume-main__education">
+            <h2>Education</h2>
+            <ul>
+              <li>
+                <h3>B.A. in Communication Studies &amp; English Literature</h3>
+                <p>Northwestern University,<span class="dates"> 2008 - 2012</span></p>
+              </li>
+              <li>
+                <h3>Certificate in Interactive Design &amp; Development</h3> 
+                <p>Harold Washington College, <span class="dates">2015 - 2016</span></p>
+              </li>
+            </ul>
+          </div>
+        </div>    
+      </main>
+
+      <footer>
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/valerieseer" target="_blank">
+              LinkedIn
+            </a>
+          </li>
+          <li>
+            <a href="https://codepen.io/valerieseer/" target="_blank">
+              Codepen
+            </a>
+          </li>
+        </ul>
+        <p>&copy; <span class="copyright-date"></span> Valerie Seer</p>
+      </footer>
+    </section>
     <!-- scripts -->
     <script src="js/index.js"></script>
   </body>
