--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               </a>
             </li>
           </ul>
+          <a href="mailto:seervalerie@gmail.com" class="email">Email Me</a>
         </div>
         <div class="home__img">
           <img src="images/giphy.gif"/>
@@ -58,7 +59,6 @@
     </div>
 
     <footer>
-      <a href="mailto:seervalerie@gmail.com" class="footer__email-btn">Email Me</a>
       <p>&copy; <span class="copyright-date"></span> Valerie Seer</p>
     </footer>
   </section>
