Rebrand, clean up code

--- a/index.html
+++ b/index.html
@@ -16,23 +16,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="title" content="Valerie Seer / Web Developer">
-  <meta name="description" content="Chicago-based developer and UX designer">
+  <meta name="description" content="Chicago-based web developer and UX designer">
   <link rel="icon" href="favicon.ico" type="image" />
+
+  <!-- Local CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <section class="homepage-wrapper">
-    <div class="main-content">
+  <section class="home-container">
+    <div class="home-content">
       <nav>
           <ul class="col">
             <li class="home-link"><a href="index.html">HELLO</a></li>
             <li class="resume-link"><a href="resume.html">RESUME</a></li>
+            <!-- <li class="resume-link"><a href="portfolio.html">PORTFOLIO</a></li> -->
           </ul>
       </nav>
       
       <main class="home col animation_element animation_element--fadein">
-        <div class="home__content">
+        <div class="info">
           <h1>Valerie Seer</h1>
           <h2>Web Developer &amp; UX Designer in Chicago, Illinois</h2>
           <p>I build websites and design UX solutions.</p>
@@ -49,9 +52,9 @@
               </a>
             </li>
           </ul>
-          <a href="mailto:seervalerie@gmail.com" class="email">Email Me</a>
+          <a href="mailto:seervalerie@gmail.com" class="email">Or send me an email.</a>
         </div>
-        <div class="home__img">
+        <div class="img">
           <img src="images/giphy.gif"/>
           <p>Probably me right now.</p>
         </div>
@@ -59,11 +62,11 @@
     </div>
 
     <footer>
-      <p>&copy; <span class="copyright-date"></span> Valerie Seer</p>
+      <p>&copy; <span class="year"></span> Valerie Seer</p>
     </footer>
   </section>
 
-  <!-- scripts -->
+  <!-- Local JS -->
   <script src="js/index.js"></script>
 </body>
 </html>
