Redo resume/about page

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 </head>
 
 <body>
-  <section class="home-container">
-    <div class="home-content">
+  <section class="container">
+    <div>
       <nav>
           <ul class="col">
-            <li class="home-link"><a href="index.html">HELLO</a></li>
-            <li class="resume-link"><a href="resume.html">RESUME</a></li>
+            <li class="link home-link"><a href="index.html">Hello</a></li>
+            <li class="link about-link"><a href="about.html">About</a></li>
             <!-- <li class="resume-link"><a href="portfolio.html">PORTFOLIO</a></li> -->
           </ul>
       </nav>
