--- a/about.html
+++ b/about.html
@@ -47,7 +47,8 @@
           <section class="content">
             <h2>I'm a self-taught web developer with a background in communications.</h2>
             <section>
-              <p>I believe that less is more. I strive to be an advisory partner for each client, while always being mindful of their specific needs and pain points.</p>
+              <p>I believe that less is more.</p>
+              <p>I strive to be an advisory partner for each client, while always being mindful of their specific needs and pain points.</p>
               <p>Effective communication, honesty, and accountability are essential in my work.</p>
             </section>
             <section>
