--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <main class="home col animation_element animation_element--fadein">
         <div class="info">
           <h1>Valerie Seer</h1>
-          <h2>Web Developer &amp; UX Designer in Chicago, Illinois</h2>
+          <h2>Web Developer &amp; UX Designer in Chicago, Illinois.</h2>
           <p>I build websites and design UX solutions.</p>
           <p>Catch me on:</p>
           <ul>
