Update about h1 messaging

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           <div class="about-header__bg"></div>
           <div class="col">
             <div class="title">
-              <h1>I let my <span class="underline-3"><a href="https://codepen.io/valerieseer/" target="_blank">work</a></span> do the talking for me.</h1>
+              <h1>I let my <span class="underline-3"><a href="https://codepen.io/valerieseer/" target="_blank">work</a></span> do most of the talking.</h1>
             </div>
           </div>
         </header>
