--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
               <ul>
                 <li>Employed as a full-time web developer at <em><a href="https://www.reputation.com/" target="_blank">Reputation.com</a></em> since 2016.</li>
                 <li>Technical skills include HTML5, CSS3, LESS/Flexbox/Grid, Bootstrap 4, jQuery, ES6, Gulp, Git, node.js, npm.</li>
-                <li>Other web development skills include Agile development, JIRA, bash command line, DOM manipulation, page speed optimization, WCAG 2.0 accessibility, SEO.</li>
+                <li>Other web development skills include Agile development, JIRA, page speed optimization, WCAG 2.0 accessibility, SEO, bash command line, DOM manipulation.</li>
                 <li>B.A. from Northwestern University.</li>
                 <li>Certificate in Interactive design and development.</li>
               </ul>
