Add project link in about page, redo about page using css grid

--- a/about.html
+++ b/about.html
@@ -24,48 +24,47 @@
   </head>
 
   <body>  
-    <section class="about animation_element animation_element--fadein">
+    <section class="about">
       <div>
         <nav>
           <ul class="col">
             <li class="link home-link"><a href="index.html">Hello</a></li>
-            <li class="link about-link"><a href="resume.html">About</a></li>
+            <li class="link about-link"><a href="about.html">About</a></li>
             <!-- <li class="resume-link"><a href="portfolio.html">PORTFOLIO</a></li> -->
           </ul>
         </nav>
   
-        <header>
-          <div class="about-header__bg"></div>
-          <div class="col">
-            <div class="title">
-              <h1>I let my <span class="underline-3"><a href="https://codepen.io/valerieseer/" target="_blank">work</a></span> do most of the talking.</h1>
-            </div>
-          </div>
-        </header>
-  
-        <main class="col">
+        <main class="col animation_element animation_element--fadein">
+          <h1>I let my <span class="underline-3"><a href="https://codepen.io/valerieseer/" target="_blank">work</a></span> do most of the talking.</h1>
+
           <section class="content">
-            <h2>I'm a self-taught web developer with a background in communications.</h2>
-            <section>
-              <p>I believe that less is more.</p>
-              <p>I strive to be an advisory partner for each client, while always being mindful of their specific needs and pain points.</p>
-              <p>Effective communication, honesty, and accountability are essential in my work.</p>
-            </section>
-            <section>
-              <p>For details into my professional experience, <em><a href="seer_resume.pdf" target="_blank" class="pdf-link"><i class="fa fa-file-pdf"></i>you may download a PDF version of my resume</a></em>. Some highlights:</p>
+            <div class="left">
+              <h2>I'm a self-taught web developer with a background in communications.</h2>
+              <div>
+                <p>I believe that less is more. I strive to be an advisory partner for each client, while always being mindful of their specific needs and pain points.</p>
+              </div>
+              <div>
+                <p>For details into my professional experience, <em><a href="seer_resume.pdf" target="_blank" class="pdf-link"><i class="fa fa-file-pdf"></i>you may download a PDF version of my resume</a></em>. Some highlights:</p>
+                <ul>
+                  <li>Employed as a full-time web developer at <em><a href="https://www.reputation.com/" target="_blank">Reputation.com</a></em> since 2016.</li>
+                  <li>Technical skills include HTML5, CSS3, LESS/Flexbox/Grid, Bootstrap 4, jQuery, ES6, Gulp, Git, node.js, npm.</li>
+                  <li>Other web development skills include Responsive web design, Agile development, JIRA, page speed optimization, WCAG 2.0 accessibility, SEO, bash command line, DOM manipulation.</li>
+                  <li>B.A. from Northwestern University.</li>
+                  <li>Certificate in Interactive design and development.</li>
+                </ul>
+              </div>
+              <div>
+                <p>This site was coded with &hearts; by yours truly and is powered by Github pages.</p>
+              </div>
+            </div>
+            <div class="right">
+              <h2>Play around with some of my projects</h2>
               <ul>
-                <li>Employed as a full-time web developer at <em><a href="https://www.reputation.com/" target="_blank">Reputation.com</a></em> since 2016.</li>
-                <li>Technical skills include HTML5, CSS3, LESS/Flexbox/Grid, Bootstrap 4, jQuery, ES6, Gulp, Git, node.js, npm.</li>
-                <li>Other web development skills include Agile development, JIRA, page speed optimization, WCAG 2.0 accessibility, SEO, bash command line, DOM manipulation.</li>
-                <li>B.A. from Northwestern University.</li>
-                <li>Certificate in Interactive design and development.</li>
+                <li><a href="https://codepen.io/valerieseer/full/deLXWy" target="_blank">Pixel Art Maker</a></li>
+                <li><a href="https://codepen.io/valerieseer/full/ebbevz" target="_blank">Memory Game</a></li>
               </ul>
-            </section>
-            <section>
-              <p>All the code for this site was written with &hearts; by yours truly and is powered by Github pages.</p>
-            </section>
-          </section>
-          
+            </div>
+          </section>          
         </main>
       </div>
 
