Comment out projects for now

--- a/about.html
+++ b/about.html
@@ -57,13 +57,13 @@
                 <p>This site was coded with &hearts; by yours truly and is powered by Github pages.</p>
               </div>
             </div>
-            <div class="right">
+            <!-- <div class="right">
               <h2>Play around with some of my projects</h2>
               <ul>
                 <li><a href="https://codepen.io/valerieseer/full/deLXWy" target="_blank">Pixel Art Maker</a></li>
                 <li><a href="https://codepen.io/valerieseer/full/ebbevz" target="_blank">Memory Game</a></li>
               </ul>
-            </div>
+            </div> -->
           </section>          
         </main>
       </div>
