--- a/about.html
+++ b/about.html
@@ -14,49 +14,40 @@
   </head>
 
   <body>  
-    <section class="about">
-      <div>
-        <nav>
-          <ul class="col">
-            <li class="link home-link"><a href="index.html">Hello</a></li>
-            <li class="link about-link"><a href="about.html">About</a></li>
-            <!-- <li class="resume-link"><a href="portfolio.html">PORTFOLIO</a></li> -->
-          </ul>
-        </nav>
-  
-        <main class="col animation_element animation_element--fadein">
-          <h1>I let my <span class="underline-3"><a href="https://codepen.io/valerieseer/" target="_blank">work</a></span> do most of the talking.</h1>
+    <section class="about animation_element animation_element--fadein">
+      <nav>
+        <ul class="col">
+          <li class="link home-link"><a href="index.html">Hello</a></li>
+          <li class="link about-link"><a href="about.html">About</a></li>
+        </ul>
+      </nav>
 
-          <section class="content">
-            <div class="left">
-              <h2>I'm a self-taught web developer with a background in communications.</h2>
-              <div>
-                <p>I believe that less is more. I strive to be an advisory partner for each client, while always being mindful of their specific needs and pain points.</p>
-              </div>
-              <div>
-                <p>For details into my professional experience, <em><a href="seer_resume.pdf" target="_blank" class="pdf-link"><i class="fa fa-file-pdf"></i>you may download a PDF version of my resume</a></em>. Some highlights:</p>
-                <ul>
-                  <li>Employed as a full-time web developer at <em><a href="https://www.reputation.com/" target="_blank">Reputation.com</a></em> since 2016.</li>
-                  <li>Technical skills include HTML5, CSS3, LESS/Flexbox/Grid, Bootstrap 4, jQuery, ES6, Gulp, Git, node.js, npm.</li>
-                  <li>Other web development skills include Responsive web design, Agile development, JIRA, page speed optimization, WCAG 2.0 accessibility, SEO, bash command line, DOM manipulation.</li>
-                  <li>B.A. from Northwestern University.</li>
-                  <li>Certificate in Interactive design and development.</li>
-                </ul>
-              </div>
-              <div>
-                <p>This site was coded with &hearts; by yours truly and is powered by Github pages.</p>
-              </div>
+      <main class="col">
+        <h1>Let's work together.</h1>
+
+        <section class="content">
+          <div class="left">
+            <div class="section">
+              <h2>I'm a website builder and code writer.</h2>
+              <p>I've worked with various clients, large and small. My experience has ranged from building pages from the ground up via HTML/CSS/JS, to setting up and customizing WordPress and Squarespace themes.</p>
+              <p>For more details into my technical experience, <em><a href="seer_resume.pdf" target="_blank" class="pdf-link"><i class="fa fa-file-pdf"></i>you may view and download my resume here</a></em>.</p>
             </div>
-            <!-- <div class="right">
-              <h2>Play around with some of my projects</h2>
+            <div class="section">
+              <h2>Selected works:</h2>
+              <h3>Freelance websites</h3>
               <ul>
-                <li><a href="https://codepen.io/valerieseer/full/deLXWy" target="_blank">Pixel Art Maker</a></li>
-                <li><a href="https://codepen.io/valerieseer/full/ebbevz" target="_blank">Memory Game</a></li>
+                <li><a href="https://www.drbonniemason.com/" target="_blank">Dr. Bonnie Simpson Mason</a> - Squarespace configuration and theme customization.</li>
+                <li><a href="https://www.smarklabs.com/" target="_blank">SmarkLabs</a> - WordPress theme customization.</li>
               </ul>
-            </div> -->
-          </section>          
-        </main>
-      </div>
+              <h3>Front-end development projects</h3>
+              <ul>
+                <li><a href="https://codepen.io/valerieseer/pen/deLXWy">Pixel Art Maker</a></li>
+                <li><a href="https://codepen.io/valerieseer/pen/ebbevz">Memory Game</a></li>
+              </ul>
+            </div>
+          </div>
+        </section>          
+      </main>
 
       <footer>
         <h2>Contact me, stalk me.</h2>
