--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
           <ul class="col">
             <li class="link home-link"><a href="index.html">Hello</a></li>
             <li class="link about-link"><a href="about.html">About</a></li>
-            <!-- <li class="resume-link"><a href="portfolio.html">PORTFOLIO</a></li> -->
           </ul>
       </nav>
       
       <main class="home col animation_element animation_element--fadein">
         <div class="info">
           <h1>Valerie Seer</h1>
-          <h2>Web Developer &amp; UX Designer in Chicago, Illinois.</h2>
-          <p>I build websites and design UX solutions.</p>
+          <h2>Web UI/UX Designer &amp; Developer in Chicago, Illinois.</h2>
+          <p>I build websites and write code.</p>
           <p>Catch me on:</p>
           <ul>
             <li>
