Update copy and styles

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <section class="content">
           <div class="left">
             <div class="section">
-              <h2>I'm a website builder and code writer.</h2>
+              <h2>I build websites and write code.</h2>
               <p>I've worked with various clients, large and small. My experience has ranged from building pages from the ground up via HTML/CSS/JS, to setting up and customizing WordPress and Squarespace themes.</p>
               <p>For more details into my technical experience, <em><a href="seer_resume.pdf" target="_blank" class="pdf-link"><i class="fa fa-file-pdf"></i>you may view and download my resume here</a></em>.</p>
             </div>
