Copy and style updates

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <main class="home col animation_element animation_element--fadein">
         <div class="info">
           <h1>Valerie Seer</h1>
-          <h2>Web UI/UX Designer &amp; Developer in Chicago, Illinois.</h2>
+          <h2>UI/UX Designer &amp; Developer in Chicago, Illinois.</h2>
           <p>Catch me on:</p>
           <ul>
             <li>
