--- a/about.html
+++ b/about.html
@@ -23,13 +23,12 @@
       </nav>
 
       <main class="col">
-        <h1>Let's work together.</h1>
+        <h1>I build websites and write code.</h1>
 
         <section class="content">
           <div class="left">
             <div class="section">
-              <h2>I build websites and write code.</h2>
-              <p>I've worked with various clients, large and small. My experience has ranged from building pages from the ground up via HTML/CSS/JS, to setting up and customizing WordPress and Squarespace themes.</p>
+              <p>I've worked with various clients large and small, with experience ranging from building pages from the ground up via HTML/CSS/JS, to setting up and customizing WordPress and Squarespace themes.</p>
               <p>For more details into my technical experience, <em><a href="seer_resume.pdf" target="_blank" class="pdf-link"><i class="fa fa-file-pdf"></i>you may view and download my resume here</a></em>.</p>
             </div>
             <div class="section">
@@ -39,7 +38,7 @@
                 <li><a href="https://www.drbonniemason.com/" target="_blank">Dr. Bonnie Simpson Mason</a> - Squarespace configuration and theme customization.</li>
                 <li><a href="https://www.smarklabs.com/" target="_blank">SmarkLabs</a> - WordPress theme customization.</li>
               </ul>
-              <h3>Front-end development projects</h3>
+              <h3>Front-end apps</h3>
               <ul>
                 <li><a href="https://codepen.io/valerieseer/pen/deLXWy">Pixel Art Maker</a></li>
                 <li><a href="https://codepen.io/valerieseer/pen/ebbevz">Memory Game</a></li>
